--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -165,19 +165,17 @@ jobs:
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../kernelsu_patch/mksu/mksu_susfs.patch ./KernelSU/
-        cp ../kernelsu_patch/mksu/kernel/core_hook.c.patch ./KernelSU/kernel
-        cp ../kernelsu_patch/mksu/kernel/sucompat.c.patch ./KernelSU/kernel
+        cp ../kernelsu_patch/mksu/fix.patch ./KernelSU/
+        cp ../kernelsu_patch/mksu/vfs_fix.patch ./KernelSU/
         
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         patch -p1 --forward < mksu_susfs.patch || true
+        patch -p1 --forward < fix.patch || true
+        patch -p1 --forward < vfs_fix.patch || true
         
-        cd kernel
-        patch -p1 --forward < core_hook.c.patch || true
-        patch -p1 --forward < sucompat.c.patch || true
-        
-        cd ../../common
+        cd ../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
         cp ../../kernelsu_patch/69_hide_stuff.patch ./
