--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -139,6 +139,7 @@ jobs:
       run: |
         cd kernel_workspace
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }} --depth 1
+        git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git --depth 1
         cd kernel_platform
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
@@ -153,15 +154,14 @@ jobs:
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+        
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
     - name: MKSU 补丁
       if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG == 'mksu'
       run: |
-        cd kernel_workspace
-        git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git --depth 1
-        cd kernel_platform
+        cd kernel_workspace/kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../kernelsu_patch/mksu/mksu_susfs.patch ./KernelSU/
@@ -171,6 +171,7 @@ jobs:
         # 应用补丁
         cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+        
         patch -p1 --forward < mksu_susfs.patch || true
         patch -p1 --forward < fix.patch || true
         patch -p1 --forward < vfs_fix.patch || true
@@ -178,18 +179,10 @@ jobs:
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
-        cp ../../kernelsu_patch/69_hide_stuff.patch ./
-        patch -p1 -F 3 < 69_hide_stuff.patch
-        
-        cp ../../kernelsu_patch/hooks/new_hooks.patch ./
-        patch -p1 -F 3 < new_hooks.patch
-
     - name: RKSU 补丁
       if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG == 'rksu'
       run: |
-        cd kernel_workspace
-        git clone https://github.com/yuanqiongyoukong/kernelsu_patch.git --depth 1
-        cd kernel_platform
+        cd kernel_workspace/kernel_platform
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         
@@ -204,28 +197,28 @@ jobs:
         cd ./common
         patch -p1 -f < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
-        cp ../../kernelsu_patch/69_hide_stuff.patch ./
-        patch -p1 -F 3 < 69_hide_stuff.patch
-        
-        cp ../../kernelsu_patch/hooks/new_hooks.patch ./
-        patch -p1 -F 3 < new_hooks.patch
-        
     - name: SukiSU 补丁
       if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG == 'sukisu'
       run: |
-        cd kernel_workspace
-        git clone https://github.com/ShirkNeko/SukiSU_patch.git
-        cd kernel_platform
+        cd kernel_workspace/kernel_platform
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         
         # 应用补丁
         cd ./common
         patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
         
-        cp ../../SukiSU_patch/69_hide_stuff.patch ./
+    - name: Hide Stuff 补丁
+      if: github.event.inputs.SUSFS_ENABLED == 'true'
+      run: |
+        cd kernel_workspace/kernel_platform/common
+        cp ../../kernelsu_patch/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-        
-        cp ../../SukiSU_patch/hooks/new_hooks.patch ./
+
+    - name: New Hooks 补丁
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.PATCH_CONFIG != 'ksu'
+      run: |
+        cd kernel_workspace/kernel_platform/common
+        cp ../../kernelsu_patch/hooks/new_hooks.patch ./
         patch -p1 -F 3 < new_hooks.patch
         
     - name: 添加 SUSFS 配置设置
