--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -51,7 +51,7 @@ on:
           - rksu
           - sukisu
       KERNEL_NAME:
-        description: "自定义内核后版本名"
+        description: "自定义内核版本号"
         required: false 
         default: ''
         
