--- a/.github/workflows/Build_SukiSU_Ultra_OnePlus.yml
+++ b/.github/workflows/Build_SukiSU_Ultra_OnePlus.yml
@@ -9,7 +9,7 @@ on:
       FEIL:
         description: "配置文件"
         required: true
-        default: 'oneplus_ace2pro_v'
+        default: 'oneplus_ace3_v'
       CPUD:
         description: "处理器代号"
         required: true
