--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -1,7 +1,6 @@
-name: 构建ACE3内核-KernelSU-SUS
+name: 构建ACE3内核-KernelSU-SUSFS
 on:
   workflow_dispatch:
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,20 +42,19 @@ jobs:
         
     - name: 添加SUSFS
       run: |
-           cd kernel_workspace
-           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android13-5.15
-           cd kernel_platform
-           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
-           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch ./common/
-           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-           
-           # 应用补丁
-           cd ./KernelSU
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-           cd ../common
-           patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-           
+        cd kernel_workspace
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android13-5.15
+        cd kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch ./common/
+        cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
+        cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        # 应用补丁
+        cd ./KernelSU
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+        cd ../common
+        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
+        
     - name: 编译内核
       run: |
         cd kernel_workspace
