--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -215,7 +215,7 @@ jobs:
         patch -p1 -F 3 < 69_hide_stuff.patch
 
     - name: New Hooks 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.KSU_VERSION != 'ksu'
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.KSU_VERSION != 'ksu' || github.event.inputs.KSU_VERSION != 'rksu'
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../kernelsu_patch/hooks/new_hooks.patch ./
