--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -219,7 +219,7 @@ jobs:
         patch -p1 -F 3 < 69_hide_stuff.patch
 
     - name: New Hooks 补丁
-      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.KSU_VERSION != 'ksu'
+      if: github.event.inputs.SUSFS_ENABLED == 'true' && github.event.inputs.KSU_VERSION != 'ksu' || github.event.inputs.KSU_VERSION != 'rksu'
       run: |
         cd kernel_workspace/kernel_platform/common
         cp ../../kernelsu_patch/hooks/new_hooks.patch ./
@@ -238,12 +238,11 @@ jobs:
         fi
         
         # 添加 VFS 配置设置
-        if [[ "${{ github.event.inputs.KSU_VERSION  }}" == 'ksu' ]]; then
+        if [[ "${{ github.event.inputs.KSU_VERSION  }}" == 'ksu' || "${{ github.event.inputs.KSU_VERSION  }}" == 'rksu' ]]; then
           echo "CONFIG_KSU_SUSFS_SUS_SU=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=y" >> ./common/arch/arm64/configs/gki_defconfig
         else
           echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n" >> ./common/arch/arm64/configs/gki_defconfig
         fi
